--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario.html
@@ -107,7 +107,7 @@
                                              <label for="username">
                                                 <strong>Nombre</strong>
                                              </label>
-                                             <input type="text" class="form-control" id="username" name="username" />
+                                             <input readonly type="text" class="form-control" id="username" name="username" />
                                           </div>
                                        </div>
                                        <div class="col">
@@ -115,7 +115,7 @@
                                              <label for="email">
                                                 <strong>Email</strong>
                                              </label>
-                                             <input type="email" class="form-control" id="email" name="email" />
+                                             <input readonly type="email" class="form-control" id="email" name="email" />
                                           </div>
                                        </div>
                                     </div>
@@ -125,7 +125,7 @@
                                              <label for="first_name">
                                                 <strong>Apellido</strong>
                                              </label>
-                                             <input type="text" class="form-control" id="first_name"
+                                             <input readonly type="text" class="form-control" id="first_name"
                                                 name="first_name" />
                                           </div>
                                        </div>
@@ -134,7 +134,7 @@
                                              <label for="last_name">
                                                 <strong>Fecha nacimiento</strong>
                                              </label>
-                                             <input type="text" class="form-control" id="last_name" name="last_name" />
+                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
                                           </div>
                                        </div>
                                     </div>
@@ -144,7 +144,7 @@
                                              <label for="first_name">
                                                 <strong>Institucion</strong>
                                              </label>
-                                             <input type="text" class="form-control" id="first_name"
+                                             <input readonly type="text" class="form-control" id="first_name"
                                                 name="first_name" />
                                           </div>
                                        </div>
@@ -153,7 +153,7 @@
                                              <label for="last_name">
                                                 <strong>Descripcion</strong>
                                              </label>
-                                             <input type="text" class="form-control" id="last_name" name="last_name" />
+                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
                                           </div>
                                        </div>
                                     </div>
@@ -163,7 +163,7 @@
                                              <label for="first_name">
                                                 <strong>Bibliografia</strong>
                                              </label>
-                                             <input type="text" class="form-control" id="first_name"
+                                             <input readonly type="text" class="form-control" id="first_name"
                                                 name="first_name" />
                                           </div>
                                        </div>
@@ -172,7 +172,7 @@
                                              <label for="last_name">
                                                 <strong>Url</strong>
                                              </label>
-                                             <input type="text" class="form-control" id="last_name" name="last_name" />
+                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
                                           </div>
                                        </div>
                                     </div>
@@ -185,7 +185,7 @@
 
                   <div class="card shadow mb-5">
                      <div id="act-dep" class="card-header py-3">
-                        <p class="text-primary m-0 font-weight-bold">Actividades deportivas</p>
+                        <p class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas (Aceptada)</p>
                      </div>
                      <div id="act-dep-cont" class="card-body">
                         <div class="row">
@@ -193,9 +193,8 @@
                               <thead>
                                  <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
+                                    <th scope="col">Nombre</th>
+                                    <th scope="col">Descripcion</th>
                                  </tr>
                               </thead>
                               <tbody>
@@ -203,17 +202,15 @@
                                     <th scope="row">1</th>
                                     <td> <a href="url">link text</a> Mark</td>
                                     <td>Otto</td>
-                                    <td>@mdo</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">2</th>
                                     <td>Jacob</td>
                                     <td>Thornton</td>
-                                    <td>@fat</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
+                                    <td>Larry the Bird</td>
                                     <td>@twitter</td>
                                  </tr>
                               </tbody>
@@ -232,9 +229,9 @@
                               <thead>
                                  <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
+                                    <th scope="col">Nombre</th>
+                                    <th scope="col">Fecha</th>
+                                    <th scope="col">Actividad deportiva</th>
                                  </tr>
                               </thead>
                               <tbody>
@@ -252,8 +249,9 @@
                                  </tr>
                                  <tr>
                                     <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
+                                    <td>Larry the Bird</td>
                                     <td>@twitter</td>
+                                    <td>@fat</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -263,7 +261,7 @@
 
                   <div class="card shadow mb-5">
                      <div id="act-dep-ing" class="card-header py-3">
-                        <p   class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas(estados)</p>
+                        <p   class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas (Ingresada, Rechazada)</p>
                      </div>
                      <div id="act-dep-ing-cont" class="card-body">
                         <div class="row">
@@ -271,9 +269,9 @@
                               <thead>
                                  <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
+                                    <th scope="col">Nombre</th>
+                                    <th scope="col">Descripcion</th>
+                                    <th scope="col">Estado</th>
                                  </tr>
                               </thead>
                               <tbody>
@@ -310,28 +308,21 @@
                               <thead>
                                  <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
+                                    <th scope="col">Nombre</th>
                                  </tr>
                               </thead>
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
                                     <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">2</th>
                                     <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">3</th>
                                     <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -355,20 +346,20 @@
                                         <table class="table table-bordered">
                                             <tbody>
                                                 <tr>
-                                                    <td class="stat">Display</td>
-                                                    <td>5.2&quot;</td>
+                                                    <td class="stat">Nickname</td>
+                                                    <td>.</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="stat">Camera</td>
-                                                    <td>12MP</td>
+                                                    <td class="stat"></td>
+                                                    <td>.</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="stat">RAM</td>
-                                                    <td>4GB</td>
+                                                    <td class="stat"></td>
+                                                    <td>.</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="stat">OS</td>
-                                                    <td>iOS</td>
+                                                    <td class="stat"></td>
+                                                    <td>.</td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -379,20 +370,20 @@
                                     <table class="table table-bordered">
                                         <tbody>
                                             <tr>
-                                                <td class="stat">Display</td>
-                                                <td>5.2&quot;</td>
+                                                <td class="stat">Nickname</td>
+                                                <td>.</td>
                                             </tr>
                                             <tr>
                                                 <td class="stat">Camera</td>
-                                                <td>12MP</td>
+                                                <td>.</td>
                                             </tr>
                                             <tr>
                                                 <td class="stat">RAM</td>
-                                                <td>4GB</td>
+                                                <td>.</td>
                                             </tr>
                                             <tr>
                                                 <td class="stat">OS</td>
-                                                <td>iOS</td>
+                                                <td>.</td>
                                             </tr>
                                         </tbody>
                                     </table>
