--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaPerfilUsuario-Socio.html
@@ -80,16 +80,13 @@
             <ul id="listaActividades" class="list-group my-4">
                <li class="list-group-item"><strong>Instituciones Deportivas</strong></li>
                <li class="list-group-item">Telon</li>
-               <li class="list-group-item">Instituto Natural</li>
-               <li class="list-group-item">Olympic</li>
-               <li class="list-group-item">Fuerza Bruta</li>
             </ul>
             <ul id="listaCategorias" class="list-group my-4">
                <li class="list-group-item"><strong>Categorías</strong></li>
                <li class="list-group-item">Al aire libre</li>
+               <li class="list-group-item">Deportes</li>
                <li class="list-group-item">Fitness</li>
-               <li class="list-group-item">Football</li>
-               <li class="list-group-item">Artes Marciales</li>
+               <li class="list-group-item">Gimnasia</li>
             </ul>
          </div>
          <div class="col-12 col-md-9">
@@ -98,7 +95,7 @@
                   <h3 class="text-dark mb-4">Perfil</h3>
                   <form>
                      <select class="form-control" required>
-                            <option value="12" selected>Usuario 1</option>
+                            <option value="Emi71" selected>Emi71</option>
                             <option value="13">Usuario 2</option>
                             <option value="14">Usuario 3</option>
                     </select>
@@ -108,7 +105,7 @@
                      <div class="col-lg-4">
                         <div class="card mb-3">
                            <div class="card-body text-center shadow">
-                              <img class="rounded-circle mb-3 mt-4" src="./resources/img/user.png" width="160"
+                              <img class="rounded-circle mb-3 mt-4" src="https://bit.ly/3lxoBvZ" width="160"
                                  height="160" />
                            </div>
                         </div>
@@ -161,7 +158,7 @@
                                              <label for="username">
                                                 <strong>Nombre</strong>
                                              </label>
-                                             <input readonly type="text" class="form-control" id="username" name="username" />
+                                             <input value="Emiliano" readonly type="text" class="form-control" id="username" name="username" />
                                           </div>
                                        </div>
                                        <div class="col">
@@ -169,7 +166,7 @@
                                              <label for="email">
                                                 <strong>Email</strong>
                                              </label>
-                                             <input readonly type="email" class="form-control" id="email" name="email" />
+                                             <input value="emi71@gmail.com " readonly type="email" class="form-control" id="email" name="email" />
                                           </div>
                                        </div>
                                     </div>
@@ -179,7 +176,7 @@
                                              <label for="first_name">
                                                 <strong>Apellido</strong>
                                              </label>
-                                             <input readonly type="text" class="form-control" id="first_name"
+                                             <input value="Lucas" readonly type="text" class="form-control" id="first_name"
                                                 name="first_name" />
                                           </div>
                                        </div>
@@ -188,87 +185,13 @@
                                              <label for="last_name">
                                                 <strong>Fecha nacimiento</strong>
                                              </label>
-                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
-                                          </div>
-                                       </div>
-                                    </div>
-                                    <div class="form-row">
-                                       <div class="col">
-                                          <div class="form-group">
-                                             <label for="first_name">
-                                                <strong>Institucion</strong>
-                                             </label>
-                                             <input readonly type="text" class="form-control" id="first_name"
-                                                name="first_name" />
-                                          </div>
-                                       </div>
-                                       <div class="col">
-                                          <div class="form-group">
-                                             <label for="last_name">
-                                                <strong>Descripcion</strong>
-                                             </label>
-                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
-                                          </div>
-                                       </div>
-                                    </div>
-                                    <div class="form-row">
-                                       <div class="col">
-                                          <div class="form-group">
-                                             <label for="first_name">
-                                                <strong>Bibliografia</strong>
-                                             </label>
-                                             <input readonly type="text" class="form-control" id="first_name"
-                                                name="first_name" />
-                                          </div>
-                                       </div>
-                                       <div class="col">
-                                          <div class="form-group">
-                                             <label for="last_name">
-                                                <strong>Url</strong>
-                                             </label>
-                                             <input readonly type="text" class="form-control" id="last_name" name="last_name" />
+                                             <input value="31/12/1971" readonly type="text" class="form-control" id="last_name" name="last_name" />
                                           </div>
                                        </div>
                                     </div>
                                  </div>
                               </div>
                            </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="card shadow mb-5">
-                     <div id="act-dep" class="card-header py-3">
-                        <p class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas (Aceptada)</p>
-                     </div>
-                     <div id="act-dep-cont" class="card-body">
-                        <div class="row">
-                           <table class="table table-hover">
-                              <thead>
-                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Nombre</th>
-                                    <th scope="col">Descripcion</th>
-                                 </tr>
-                              </thead>
-                              <tbody>
-                                 <tr>
-                                    <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry the Bird</td>
-                                    <td>@twitter</td>
-                                 </tr>
-                              </tbody>
-                           </table>
                         </div>
                      </div>
                   </div>
@@ -291,60 +214,33 @@
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
+                                    <td> <a href="url">Voleibol</a></td>
+                                    <td>10/06/21</td>
+                                    <td>Voleibol</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
+                                    <td> <a href="url">Aeróbico adulto mayor</a></td>
+                                    <td>31/08/21</td>
+                                    <td>Aeróbica</td>
                                  </tr>
                                  <tr>
                                     <th scope="row">3</th>
-                                    <td>Larry the Bird</td>
-                                    <td>@twitter</td>
-                                    <td>@fat</td>
-                                 </tr>
-                              </tbody>
-                           </table>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="card shadow mb-5">
-                     <div id="act-dep-ing" class="card-header py-3">
-                        <p   class="text-primary m-0 font-weight-bold">Actividades deportivas ingresadas (Ingresada, Rechazada)</p>
-                     </div>
-                     <div id="act-dep-ing-cont" class="card-body">
-                        <div class="row">
-                           <table class="table table-hover">
-                              <thead>
-                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Nombre</th>
-                                    <th scope="col">Descripcion</th>
-                                    <th scope="col">Estado</th>
-                                 </tr>
-                              </thead>
-                              <tbody>
-                                 <tr>
-                                    <th scope="row">1</th>
-                                    <td> <a href="url">link text</a> Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
+                                    <td> <a href="url">Músculos para boxeo</a></td>
+                                    <td>15/10/21</td>
+                                    <td>Kickboxing</td>
                                  </tr>
                                  <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
+                                    <th scope="row">4</th>
+                                    <td> <a href="url">200 M</a></td>
+                                    <td>25/10/21</td>
+                                    <td>Atletismo</td>
                                  </tr>
                                  <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <th scope="row">5</th>
+                                    <td> <a href="url">Basquet I</a></td>
+                                    <td>01/09/21</td>
+                                    <td>Basquetbol</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -363,20 +259,14 @@
                                  <tr>
                                     <th scope="col">#</th>
                                     <th scope="col">Nombre</th>
+                                    <th scope="col">Descripcion</th>
                                  </tr>
                               </thead>
                               <tbody>
                                  <tr>
                                     <th scope="row">1</th>
-                                    <td>Mark</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                 </tr>
-                                 <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
+                                    <td>Pelota</td>
+                                    <td>Deportes con pelota</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -398,23 +288,29 @@
                                 <div class="tab-pane fade specifications" role="tabpanel" id="specifications">
                                     <div class="table-responsive table-bordered">
                                         <table class="table table-bordered">
+                                          <thead>
+                                             <tr>
+                                                <th class="stat">Nickname</th>
+                                                <th>.</th>
+                                            </tr>
+                                          </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td class="stat">Nickname</td>
+                                                    <td class="stat">euge</td>
                                                     <td>.</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="stat"></td>
+                                                    <td class="stat">guille</td>
                                                     <td>.</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="stat"></td>
+                                                    <td class="stat">denis</td>
                                                     <td>.</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="stat"></td>
-                                                    <td>.</td>
-                                                </tr>
+                                                   <td class="stat">Nelson</td>
+                                                   <td>.</td>
+                                               </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -422,24 +318,18 @@
                                 <div class="tab-pane fade" role="tabpanel" id="reviews">
                                  <div class="table-responsive table-bordered">
                                     <table class="table table-bordered">
-                                        <tbody>
-                                            <tr>
-                                                <td class="stat">Nickname</td>
-                                                <td>.</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="stat">Camera</td>
-                                                <td>.</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="stat">RAM</td>
-                                                <td>.</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="stat">OS</td>
-                                                <td>.</td>
-                                            </tr>
-                                        </tbody>
+                                       <thead>
+                                          <tr>
+                                             <th class="stat">Nickname</th>
+                                             <th>.</th>
+                                         </tr>
+                                       </thead>
+                                         <tbody>
+                                             <tr>
+                                                 <td class="stat">guille</td>
+                                                 <td>.</td>
+                                             </tr>
+                                         </tbody>
                                     </table>
                                 </div>
                                 </div>
